[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/battlenet.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/Scenes/Victory.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="VictoryScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Margin-Title" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 47.0
rect_min_size = Vector2( 962, 47 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Margin-Title"]
margin_top = 9.0
margin_right = 1024.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Virus has sucessfully won"
align = 1

[node name="Margin-Body" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 1024.0
margin_bottom = 151.0
rect_min_size = Vector2( 0, 100 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Margin-Body"]
margin_top = 27.0
margin_right = 1024.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "Congratulations, virus. Despite our best efforts, the World Within is yours now.
All of our communications, services, systems... All our bases are belong to you."
align = 1
autowrap = true

[node name="Margin-Score" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 1024.0
margin_bottom = 255.0
rect_min_size = Vector2( 0, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Margin-Score"]
margin_right = 1024.0
margin_bottom = 100.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Margin-Score/VBoxContainer"]
margin_top = 27.0
margin_right = 1024.0
margin_bottom = 48.0
alignment = 1

[node name="Time" type="Label" parent="MarginContainer/VBoxContainer/Margin-Score/VBoxContainer/HBoxContainer"]
margin_left = 472.0
margin_right = 517.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "Time.:"
align = 1

[node name="TimeSpent" type="Label" parent="MarginContainer/VBoxContainer/Margin-Score/VBoxContainer/HBoxContainer"]
margin_left = 521.0
margin_right = 551.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "0:00"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Margin-Score/VBoxContainer"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 73.0
alignment = 1

[node name="Soldiers" type="Label" parent="MarginContainer/VBoxContainer/Margin-Score/VBoxContainer/HBoxContainer2"]
margin_left = 446.0
margin_right = 564.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "Soldiers killed.: "
align = 1

[node name="Soldiers killed" type="Label" parent="MarginContainer/VBoxContainer/Margin-Score/VBoxContainer/HBoxContainer2"]
margin_left = 568.0
margin_right = 577.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="Margin-Body2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 259.0
margin_right = 1024.0
margin_bottom = 359.0
rect_min_size = Vector2( 0, 100 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Margin-Body2"]
margin_top = 39.0
margin_right = 1024.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "We are at your mercy."
align = 1
autowrap = true

[node name="Margin-Buttons" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 363.0
margin_right = 1024.0
margin_bottom = 403.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Margin-Buttons"]
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
alignment = 1

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer"]
margin_left = 368.0
margin_right = 480.0
margin_bottom = 40.0
text = "Return to menu"

[node name="Replay" type="Button" parent="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer"]
margin_left = 484.0
margin_right = 655.0
margin_bottom = 40.0
text = "Test a new loadout, virus"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer/Replay" to="." method="_on_Replay_pressed"]
